--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="index.js"></script>
     <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="manifest" href="./manifest.webmanifest">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/angular-material.min.css">
     <link href="app-content/app.css" rel="stylesheet" />
